@@ -22286,6 +22286,33 @@ $result_converted_errors{'file_info'}->{'at_commands_in_refs_latin1'} = [
   },
   {
     'file_name' => '',
+    'error_line' => ":45: warning: \@node name should not contain `,': LaTeX TeX * , \x{a9} ... ...
+",
+    'text' => "\@node name should not contain `,': LaTeX TeX * , \x{a9} ... ...",
+    'type' => 'warning',
+    'macro' => '',
+    'line_nr' => 45
+  },
+  {
+    'file_name' => '',
+    'error_line' => ':69: warning: @node name should not contain `,\': i E=` C\',
+',
+    'text' => '@node name should not contain `,\': i E=` C\',',
+    'type' => 'warning',
+    'macro' => '',
+    'line_nr' => 69
+  },
+  {
+    'file_name' => '',
+    'error_line' => ':72: warning: @node name should not contain `,\': `` \'\' ` \' ,, ,
+',
+    'text' => '@node name should not contain `,\': `` \'\' ` \' ,, ,',
+    'type' => 'warning',
+    'macro' => '',
+    'line_nr' => 72
+  },
+  {
+    'file_name' => '',
     'error_line' => ':92: warning: could not find @image file `f--ile1.txt\' nor alternate text
 ',
     'text' => 'could not find @image file `f--ile1.txt\' nor alternate text',
