@@ -44,3 +44,4 @@ formatting.texi:49: command @bullet not accepting argument in brace should not b
 formatting.texi:49: command @minus not accepting argument in brace should not be on @ftable line (possibly involving @mymacro)
 formatting.texi:49: warning: @ref node name should not contain `,' (possibly involving @mymacro)
 formatting.texi:49: warning: @inforef node name should not contain `,' (possibly involving @mymacro)
+formatting.texi:99: warning: @node name should not contain `,': s--ect,ion
