@@ -56,3 +56,4 @@ formatting-cr.texi:49: command @bullet not accepting argument in brace should no
 formatting-cr.texi:49: command @minus not accepting argument in brace should not be on @ftable line (possibly involving @mymacro)
 formatting-cr.texi:49: warning: @ref node name should not contain `,' (possibly involving @mymacro)
 formatting-cr.texi:49: warning: @inforef node name should not contain `,' (possibly involving @mymacro)
+formatting-cr.texi:99: warning: @node name should not contain `,': s--ect,ion
