@@ -45,3 +45,4 @@ formatting_utf8.texi:51: command @bullet not accepting argument in brace should 
 formatting_utf8.texi:51: command @minus not accepting argument in brace should not be on @ftable line (possibly involving @mymacro)
 formatting_utf8.texi:51: warning: @ref node name should not contain `,' (possibly involving @mymacro)
 formatting_utf8.texi:51: warning: @inforef node name should not contain `,' (possibly involving @mymacro)
+formatting_utf8.texi:101: warning: @node name should not contain `,': s--ect,ion
