@@ -1,3 +1,8 @@
+2013-09-01  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Convert/Info.pm (_node): warn if node name contains
+	a comma.
+
 2013-08-31  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/Plaintext.pm: warn when cross-reference
